<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sobriety</string>
    <string name="app_issue_url">https://github.com/KiARC/Sobriety/issues</string>
    <string name="app_license">GPL v3.0</string>
    <string name="prompt">To add an addiction to the tracker, press the \"+\" button in the bottom right corner.</string>
    <string name="add_new_addiction">Add new addiction</string>
    <string name="addiction_name">Addiction name</string>
    <string name="date">Date</string>
    <string name="pick_starting_date">Pick starting date</string>
    <string name="time">Time</string>
    <string name="pick_starting_time">Pick starting time</string>
    <string name="priority">Priority</string>
    <string name="edit_priority">Edit priority</string>
    <string name="edit">Edit</string>
    <string name="edit_priority_success">Successfully edited addiction priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="create">Create</string>
    <string name="error_empty_name">Name is empty</string>
    <string name="error_duplicate_entry">Can\'t create duplicate entries</string>
    <plurals name="years">
        <item quantity="one">%d year,</item>
        <item quantity="other">%d years,</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month,</item>
        <item quantity="other">%d months,</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week,</item>
        <item quantity="other">%d weeks,</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day,</item>
        <item quantity="other">%d days,</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour,</item>
        <item quantity="other">%d hours,</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute,</item>
        <item quantity="other">%d minutes,</item>
    </plurals>
    <string name="and">and</string>
    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="recent_avg">Recent Average: %s</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Do you really want to delete entry \"%s\"?\nThis action cannot be undone.</string>
    <string name="relapse">Relapse</string>
    <string name="relapse_confirm">Log relapse of \"%s\"?</string>
    <string name="stop">Stop</string>
    <string name="stop_confirm">Stop abstaining from \"%s\"?</string>
    <string name="stop_notice">Stopped at: %s\nYour attempt lasted %s</string>
    <string name="already_stopped">You have already stopped abstaining from \"%s\".\nPress the Relapse button to start over.</string>
    <string name="timeline">Timeline</string>
    <string name="showing_timeline">Showing timeline for addiction \"%s\"</string>
    <string name="attempt">Attempt %d</string>
    <string name="time_started">Time started: %s</string>
    <string name="time_range">Time started: %s\nↆ\nTime ended: %s</string>
    <string name="duration">Duration: %s</string>
    <string name="ongoing">Ongoing… Keep it up!</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="system_theme">System theme</string>
    <string name="material_you">Material You</string>
    <string name="material_you_subtext">Android 12 users, rejoice!</string>
    <string name="sort_order">Sort order</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="no_sort">No sorting</string>
    <string name="hide_completed_milestones">Hide completed milestones</string>
    <string name="future_time_notice">You have selected a future date/time. The app will only start tracking this addiction after this time.</string>
    <string name="time_until_tracked">Will be tracked after %s</string>
    <string name="not_tracked_yet">\"%s\" has not been tracked yet. If you want to track it now, press the Relapse button.</string>
    <string name="track_now">Track now</string>
    <string name="start_tracking_now">Are you ready to start tracking \"%s\" now?</string>
    <string name="misc">Miscellaneous</string>
    <string name="daily_notes">Daily notes</string>
    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="note_hint">Enter notes…</string>
    <string name="error_empty_note">Note cannot be empty</string>
    <string name="save">Save</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="delete_note_confirm">Do you really want to delete the note for %s?\nThis action cannot be undone.</string>
    <string name="savings">Savings</string>
    <string name="time_saved_per_day">Time saved per day</string>
    <string name="select_time_saved">Select amount of time saved</string>
    <string name="no_set">Not set</string>
    <string name="other_savings">Other savings</string>
    <string name="add_new_saving">Add new saving</string>
    <string name="add_new_saving_hint">What are you saving by abstaining?</string>
    <string name="saving_name">Savings name</string>
    <string name="amount_saved">Amount saved per day</string>
    <string name="unit">Unit</string>
    <string name="error_empty_amount">Amount cannot be empty</string>
    <string name="error_empty_unit">Unit cannot be empty</string>
    <string name="other_saved_per_day">Amount saved per day: %.2f %s</string>
    <string name="delete_saving_confirm">Do you really want to delete your %s saving?\nThis action cannot be undone.</string>
    <string name="milestones">Milestones</string>
    <string name="unit_hour">Hours</string>
    <string name="unit_day">Days</string>
    <string name="unit_week">Weeks</string>
    <string name="unit_month">Months</string>
    <string name="unit_year">Years</string>
    <string name="number">Number</string>
    <string name="completed">Completed</string>
    <string name="delete_milestone_confirm">Do you really want to delete this milestone?\nThis action cannot be undone.</string>
    <string name="calc_avg_durations">Calculate average durations</string>
    <string name="only_one_attempt">There\'s only one attempt</string>
    <string name="avg_duration">Average of attempt</string>
    <string name="nothing_is_chosen">Nothing is chosen</string>
    <string name="only_one_attempt_is_chosen">Only one attempt is chosen</string>
    <string name="attempt_started">Attempt %d started</string>
    <string name="attempt_ended">Attempt %d ended\nDuration: %s</string>
    <string name="present">Present</string>
    <string name="use_alt_timeline_view">Use alternative timeline view</string>
    <string name="general">General</string>
    <string name="date_format">Date format</string>
    <!--TODO think of a less awkward way to say this-->
    <string name="add_note_after_relapse">Looks like you just relapsed.\nWould you like to write down what happened today?\nThis will be saved in the \"Daily notes\" section with today\'s date.</string>
    <string name="dont_show_dialog_again">Don\'t show this dialog again</string>
    <string name="add_note_after_relapse_pref">Add note after relapse</string>
    <string name="add_note_after_relapse_pref_summary">When logging a relapse, offer to make (or edit, if it already exists) a note for that day</string>
    <string name="data">Data</string>
    <string name="data_export">Export</string>
    <string name="data_import">Import</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="opens_issue_tracker">Opens issue tracker</string>
    <string name="license">License</string>
    <string name="average_attempts_window_pref">Number of Relapses (0 to disable)</string>
    <string name="summary">Summary</string>
</resources>