<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="UnusedAttribute">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textStyle="bold"
        android:text="@string/misc"
        android:textSize="18sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/daily_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_notes"
        app:drawableStartCompat="@drawable/edit_note_24px"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/savings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savings"
        app:drawableStartCompat="@drawable/credit_card"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/milestones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/milestones"
        app:drawableStartCompat="@drawable/emoji_flags"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground" />

</LinearLayout>