<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note_after_relapse"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="6dp"
            app:counterEnabled="true"
            android:hint="@string/note_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/dont_show_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_show_dialog_again"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>

