<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:gravity="center"/>

        <TextView
            android:id="@+id/note_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:layout_marginTop="10dp"
            tools:text="October 25 2022"
            android:textStyle="bold"
            android:textSize="18sp"
            android:foreground="?attr/selectableItemBackground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="6dp"
            app:counterEnabled="true"
            android:hint="@string/note_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>
