<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="6dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:text="@string/number"
                    android:gravity="center"
                    android:layout_span="3"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:text="@string/unit"
                    android:gravity="center"
                    android:layout_marginStart="2dp"/>

            </TableRow>

            <TableRow android:layout_marginTop="6dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/milestone_number_input_layout"
                    android:layout_span="3"
                    android:layout_marginEnd="2dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/milestone_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedExposedDropdownMenuStyle"
                    android:id="@+id/milestone_time_unit_input_layout"
                    android:layout_marginStart="2dp">
                    <AutoCompleteTextView
                        android:id="@+id/unit_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        app:simpleItems="@array/time_units" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btn_save_milestone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/save"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>
